--- a/css/index.css
+++ b/css/index.css
@@ -612,9 +612,9 @@ footer ul li a {
     .section-1 {
         width: 50%;
         /* justify-content: flex-end; */
-        -webkit-box-align: end;
-        -ms-flex-align: end;
-        align-items: flex-end;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items:center;
     }
     .section-1 article h2 {
         font-size: 1.5rem;
