--- a/css/index.css
+++ b/css/index.css
@@ -329,6 +329,11 @@ body {
     padding-top: 1rem;
 }
 
+main a {
+    color: black;
+    text-decoration: none;
+}
+
 footer {
     /* background: rgb(90, 90, 90); */
     background: -webkit-gradient(linear, left top, right top, from(#134E5E), to(#71B280));
