--- a/css/index.css
+++ b/css/index.css
@@ -231,48 +231,48 @@ body {
 
 .box-1 {
     /* background: rgb(90, 90, 90); */
-    -webkit-box-shadow: var(--shadow);
-    box-shadow: var(--shadow);
+    /* box-shadow: var(--shadow); */
+    border: 2px solid black;
     padding: 2rem 0;
     font-size: 1.5rem;
 }
 
 .box-2 {
     /* background: rgb(90, 90, 90); */
-    -webkit-box-shadow: var(--shadow);
-    box-shadow: var(--shadow);
+    /* box-shadow: var(--shadow); */
+    border: 2px solid black;
     font-size: 1.5rem;
     padding: 2rem 0;
 }
 
 .box-3 {
     /* background: rgb(90, 90, 90); */
-    -webkit-box-shadow: var(--shadow);
-    box-shadow: var(--shadow);
+    /* box-shadow: var(--shadow); */
+    border: 2px solid black;
     font-size: 1.5rem;
     padding: 2rem 0;
 }
 
 .box-4 {
     /* background: rgb(90, 90, 90); */
-    -webkit-box-shadow: var(--shadow);
-    box-shadow: var(--shadow);
+    /* box-shadow: var(--shadow); */
+    border: 2px solid black;
     font-size: 1.5rem;
     padding: 2rem 0;
 }
 
 .box-5 {
     /* background: rgb(90, 90, 90); */
-    -webkit-box-shadow: var(--shadow);
-    box-shadow: var(--shadow);
+    /* box-shadow: var(--shadow); */
+    border: 2px solid black;
     font-size: 1.5rem;
     padding: 2rem 0;
 }
 
 .box-6 {
     /* background: rgb(90, 90, 90); */
-    -webkit-box-shadow: var(--shadow);
-    box-shadow: var(--shadow);
+    /* box-shadow: var(--shadow); */
+    border: 2px solid black;
     font-size: 1.5rem;
     padding: 2rem 0;
 }
